# listen1_chrome_extension

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .stylelintrc.json  CHANGELOG.md  CHANGELOG_EN.md  LICENSE  README.html  README.md  README_EN.md  comments.md  global.d.ts  headerRules.json  jsconfig.json  listen1.html  manifest.json  manifest_firefox.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  rollup.config.electron.js  rollup.config.js  rules.json  rules_1.json  ssl.js  ssl.mjs  tailwind.config.js  test.html  test1.html  tsconfig.json  vite-electron.config.ts  vite.config.js  vite.config.ts  vue.config.js
.github/workflows/: Extension Check.yml  eslint.yml  lint.yml
.husky/: pre-commit
css/: angular-ui-notification.css  beangreen.css  cherrypink.css  common.css  common2.css  cover.css  hotkeys.css  icon.css  iparanoid.css  iparanoid2.css  mustardyellow.css  notyf.min.css  notyf_custom.css  origin.css  origin2.css  player.css  reset.css  seablue.css
electron_src/: cors.js  float_window.js  floatingWindow.html  isDev.js  main.js  package.json  preload.js  readtag.js  store.js  tray.js
fonts/: listen1-icon.eot
i18n/: en-US.json  en_US.json  fr-FR.json  fr_FR.json  ko-KR.json  pt-BR.json  zh-CN.json  zh-TC.json  zh_CN.json  zh_TC.json
js/: app.js  background.js  bridge.js  download.js  favoriteplaylist.js  gist.js  github.js  github_api.js  l1_player.js  lastfm.js  loweb.js  lowebutil.js  myplaylist.js  netease.js  oauth_callback.js  playbar_animation.js  player_thread.js  qq.js  translate.js  vueapp.js  xiami.js
js/components/: playlist.js
public/: index.html
src/: App.vue  background.js  background.ts  cache.ts  env.d.ts  env.ts  i18n.js  index.html  main.js  main.ts  manifest.json  manifest.ts  oauth_callback.ts  rules.json  serviceWorker.ts  sw.ts  utils.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/media_providers/: Cargo.toml
src-tauri/media_providers/src/: kugou.rs  kuwo.rs  lib.rs  media.rs  migu.rs  netease.rs  playlist.rs  qq.rs  utils.rs
src-tauri/src/: main.rs
src-tauri/src/proxy_server/: server.rs
(+159 files in other folders)
