[package]
name = "media_providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
kuchiki = "0.8.1"
reqwest = { version = "0.11.12", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
