[package]
name = "media_providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
kuchiki = "0.8.1"
reqwest = { version = "0.11.12", features = [ "json", "cookies" ] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5", features = [ "std", "std_rng"] }
async-trait = "0.1.58"
futures = "0.3.25"
